--- a/webapp/app.cfg
+++ b/webapp/app.cfg
@@ -1,12 +1,18 @@
 # -*- coding: utf-8 -*-
-__author__ = 'seb'
+__author__ = 'peter'
 import os
 
 basedir = os.path.abspath(os.path.dirname(__file__))
 SQLALCHEMY_DATABASE_URI = 'sqlite:///' + os.path.join(basedir, 'app.db')
 
-SQLALCHEMY_ECHO = True
-SECRET_KEY = "come at me bro"
+# SQLALCHEMY_ECHO = True
+
+
+SECRET_KEY = '7d441f27d441f27567d441f2b6176a'
+CELERY_BROKER_URL = 'redis://localhost:6379/2'
+CELERY_RESULT_BACKEND = 'redis://localhost:6379/2'
+
+
 WTF_CSRF_ENABLED = True
 # Disable debugging
 DEBUG = True
